--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:LIKDoxt14z54zsMtoQAv3LyjIzDPIVsgPFxc5v0SxjA=
+APP_KEY=base64:QMCW6/ESyQdZ4Reeb7hzp7bq1yWjCwWK/0Dm0Y0lUcQ=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -15,8 +15,7 @@ DB_DATABASE=foodie
 DB_USERNAME=root
 DB_PASSWORD=
 
-FIREBASE_CREDENTIALS="login-firebase-737c3-firebase-adminsdk-q12h2-2506f37047.json"
-FIREBASE_DATABASE_URL="https://login-firebase-737c3.firebaseio.com/"
+FIREBASE_CREDENTIALS="firebase_credential.json"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
